# glipy-cli

./: README.md  pyproject.toml
glipy-cli/: renderer.py
glipy_cli/: __main__.py  args.py  renderer.py
