[tool.poetry]
name = "glipy-cli"
version = "0.1.1"
description = ""
authors = ["noprobelm <noprobelm@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.7.1"
glipy = {git = "https://github.com/noprobelm/glipy.git", rev = "devel"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
'glipy-cli' = 'glipy_cli.__main__:main'
